Added --debug argument in addition to --verbose and made it the default for testing instead.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "request": "launch",
             "name": "Launch API (Cleanup)",
             "program": "${workspaceFolder}/app/dist/index.js",
-            "args": "--verbose",
+            "args": "--debug",
             "preLaunchTask": "npm: compile - app",
             "cwd": "${workspaceFolder}/",
             "outputCapture": "std",
@@ -20,7 +20,7 @@
             "request": "launch",
             "name": "Launch API (No Cleanup)",
             "program": "${workspaceFolder}/app/dist/index.js",
-            "args": "--verbose",
+            "args": "--debug",
             "preLaunchTask": "npm: build - app",
             "cwd": "${workspaceFolder}/",
             "outputCapture": "std",
